--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,19 +1,40 @@
-* {
+*{
+    margin: 0px;
+    padding: 0px;
+    text-decoration:none;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-#header{
+.header{
+    width: 100%;
     background-color: rgba(54, 54, 54, 0.253);
+    height: 4em;
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
+ 
+ 
+
+}
+.container-header{
+    display: flex;
+    width: 70%;
     justify-content: space-between;
+
+
 }
 
 a {
-    text-decoration:none;
     color: black;
+    font-weight: 600;
+    font-size: 16px;
 }
 
 .header-left{
     display: flex; 
+       
 }
 
 .header-mid{
@@ -21,12 +42,16 @@ a {
 }
 .header-right{
     display: flex;
-    justify-content: flex-end;
+    align-items: end; 
+   
 }
 
-.main-block-left {
-    padding: 15px;
-    margin: 8px;
+.header-right a{
+   display: flex;
+   margin-right: 1em;
+}
+
+.main-block {
     display: flex;
 }
 
@@ -34,10 +59,41 @@ a {
     padding: 15px;
     margin: 8px;
     display: flex;
+
+}
+
+.main-block-right {
+    padding: 15px;
+    margin: 8px;
+    
 }
 
 .image {
-    padding: 15px;
-    margin: 8px;
-    display: flex;
+    border-radius:10px;
+
+}
+
+@media screen and (max-width:768px) { 
+    .main-block {
+        flex-direction: column;
+
+    }
+
+    .main-block-left {
+        padding: 15px;
+        margin: 8px;
+        flex-direction: column;
+
+
+    }
+
+    .main-block-right {
+        padding: 15px;
+        margin: 8px;
+        flex-direction: column;
+
+    } 
+    .image{
+        max-height: 10%;
+    }
 }
